--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,29 @@
-**/gov/
+# develpers
 **/.idea/
 **/runs/
+**/.DS_Store
 **/__pycache__/
+
+# don't include instruction
 **/instruction.pdf
 
-**/.DS_Store
-**/*.pik
-**/*.docx
-**/*.doc
+# data for A1
+**/gov/
+
+# notebook files are too large for git repos
+*.ipynb
+
+# data and pictures and document 
+*.csv
+*.json
+*.pik
+*.docx
+*.doc
+*.png
+*.npz
+
+# pre-trained word2vec file in A2
+*.vec
+
+# not to include the README file from A2 Q1
+/assignment2/Q1/data/README
